--- a/style.css
+++ b/style.css
@@ -1,18 +1,29 @@
 body {
   display: flex;
   background-color: paleturquoise;
+  flex-wrap: wrap;
+  flex-direction: column;
   margin: 2rem 2rem 2rem 2rem;
   padding: 4px;
   border: 20px;
   font-family: 'Rozha One', serif;
 }
 
-h1{
+h1 {
+  display: flex;
   font-size: 50px;
   font-style: 'Rozha One', serif;
+  justify-content: center;
+}
+
+h2{
+  display: flex;
+  justify-content: center;
 }
 
 #inputBar {
+font-size: 18px;
+padding: 10px;
 border: 5px;
 }
 
@@ -22,6 +33,14 @@ form {
   margin: auto 0;
 }
 
-.button {
+#searchButton {
+  font-size: 18px;
   border: 20px;
+}
+
+.pokemonInfo {
+  display: grid;
+  flex-direction: row;
+  justify-content: center;
+  margin: 0 auto;
 }
