--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@ body {
     text-align: center;
     
 }
-
+h2:first-letter {
+    text-transform: uppercase;
+}
 
 #pokedex {
     text-align: center;
