--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap');
+
 body {
-    width: 800px;
+    width: 900px;
     margin: auto;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Kiwi Maru', serif;
+
 }
 
 form {
@@ -27,6 +30,17 @@ input {
     color: white;
 }
 
+span {
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+.title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #pokemonName {
     text-align: center;
     color: tomato;
@@ -37,11 +51,32 @@ input {
     margin: 0 auto;
 }
 
+#homeImage {
+    display: inline-block;
+    text-align: center;
+    width:30vmin
+}
+
 img {
     display: inline_block;
     margin: 0 auto;
 }
 
 .info {
-    margin: 10px auto 10px 150px;
+    width: 70vmin;
+    margin: 8vmin auto;
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
+
+.info > div {
+    display: flex;
+    flex-direction: column;
+}
+
+li {
+    line-height: 1.8em;
+    list-style-type: circle;
+    padding: 0;
+    margin: 0;
 }
