u1-pokemon-api-lab_Solved2.0

--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,16 @@ form{
     margin-left: 25px;
     
 }
+.searchButton {
+    background-color: #ff0000; /* Red background color */
+    color: #fff; /* White text color */
+    padding: 5px 10px; /* Padding for the button */
+    border: none; /* Remove the default button border */
+    cursor: pointer; /* Change cursor to pointer on hover */
+    margin: 0px 10px 0px 10px;
+    /* Add a smooth transition for the hover effect */
+    transition: background-color 0.3s, color 0.3s;
+}
 #pNameText{
     font-size: 30px;
     font-family: 'Times new Roman', sans-serif;
@@ -64,7 +74,6 @@ form{
     padding: 10px;
     text-transform: uppercase;
 }
-
 #pType{
     font-size: 15px;
     font-family: 'Times new Roman', sans-serif;
@@ -84,4 +93,19 @@ form{
     line-height: 1.2;
     color: #fff;
     padding: 10px;
+}
+#pMoves{
+    font-size: 15px;
+    font-family: 'Times new Roman', sans-serif;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    letter-spacing: 1px;
+    line-height: 1.2;
+    color: #fff;
+    padding: 10px; 
+}
+
+#searchButton:hover{
+    background-color: #c50000; /* Darker red background color on hover */
+    color: #fff; /* White text color on hover */
 }
